# theboxproject

./: .gitignore  CMakeLists.txt  README.md  main.cpp  rotsw.cpp  rotsw.h
classes/: CMakeLists.txt  Eeprom.cpp  Eeprom.h  ExampleClass.cpp  ExampleClass.h  GMP252.cpp  GMP252.h  I2CHandler.cpp  I2CHandler.h  Informer.cpp  Informer.h  MIO12V.cpp  MIO12V.h  PicoSW.cpp  PicoSW.h  RotSW.cpp  RotSW.h  State.cpp  State.h
display/: CMakeLists.txt
i2c/: CMakeLists.txt  Eeprom.cpp  Eeprom.h  I2CBus.cpp  I2CBus.h  I2CHandler.cpp  I2CHandler.h
misc/: CMakeLists.txt  PicoSW.cpp  PicoSW.h  State.cpp  State.h
modbus/: CMakeLists.txt  MIO12V.cpp  MIO12V.h  ModbusClient.h  nanomodbus.h
mqtt/: CMakeLists.txt  IPStack.cpp  IPStack.h  MQTTHandler.cpp  MQTTHandler.h  SettingsMessage.cpp  SettingsMessage.h  StatusMessage.cpp  StatusMessage.h
mqtthandler/: CMakeLists.txt  JSONPacket.cpp  JSONPacket.h  JSONParser.h  MQTTHandler.cpp  MQTTHandler.h
observer/: CMakeLists.txt  Observer.h  Subject.cpp  Subject.h
sensors/: CMakeLists.txt  GMP252.cpp  GMP252.h  HMP60.cpp  HMP60.h  SDP600.cpp  SDP600.h  Sensor32bitRegister.h
uart/: CMakeLists.txt  PicoUart.cpp
